the latest file/information reorganization

--- a/Org/Music (ORG).org
+++ b/Org/Music (ORG).org
@@ -41,7 +41,7 @@
 
 *Release Date*: 11 May 2020
 
-*Length*: 01:01:59
+*Length*: 01:02:59
 
 *Tracks*:
 
@@ -60,6 +60,7 @@
   -  *Классный подход (Ганди) (Garage Version)* 03:44 /2020/ ([[https://soundcloud.com/shamansir/ghandi-garage?in=shamansir/sets/muenchen][SC]]) /with/ The Riders
   -  *Отторжение Лосося (Garage Version)* 04:36 /2020/ ([[https://soundcloud.com/shamansir/wpa-salmon-rejection-garage?in=shamansir/sets/muenchen][SC]]) /with/ The Riders
   -  *Вечерний Алкоголь II* 03:56 /2020/ ([[https://soundcloud.com/shamansir/wpa-alcohol-afterdark-ii?in=shamansir/sets/muenchen][SC]]) /with/ W.P.A.
+  -  *Инжир (v23)* 01:00 /2024/ ([[https://soundcloud.com/shamansir/inzhir-23?in=shamansir/sets/muenchen][SC]]) /with/ The Unriders
 *** Mozart is a Trickster (EP)
 
 ([[https://soundcloud.com/shamansir/sets/mozart-is-a-trickster-ep-2018][SC]])
