add titles to lyrics

--- a/Writing/Lyrics/Flu_Rap.org
+++ b/Writing/Lyrics/Flu_Rap.org
@@ -1,3 +1,5 @@
+* Flu-Rap (26 Jun 2018)
+
 * После того, как АИГЕЛ разочаровали меня вторым альбомом,
 сугубо субъективно,
 я подсел ещё на нескольких ребят без, надеюсь, спонсорства Газпрома,
@@ -27,6 +29,7 @@
 ведь киберпанк у пика-патимейкера просто супер-фанк, устойчивый вай-фай,
 визоидменённый углерод, неоновый водоворот, смузи-драйв,
 просто кайф
+
 * я лишь твой проводник в этом городе различных мотивов,
 который молчит, но влачит,
 свою сущность, свою сучность,
@@ -37,4 +40,5 @@
 обнажёнка у Кустодиева на картинах,
 Мартиросян в неглиже тратит бабло на Мальдивах,
 осенние листья кружатся в танце вокруг плачущих в ивах
+
 * ...
