--- a/Writing/Lyrics/Pro_Piku.org
+++ b/Writing/Lyrics/Pro_Piku.org
@@ -1,3 +1,5 @@
+* Pro Piku (26 Jun 2018)
+
 * После того, как АИГЕЛ разочаровали меня вторым альбомом,
 сугубо субъективно,
 я подсел ещё на нескольких ребят без, надеюсь, спонсорства Газпрома,
